force-app/main/default/objects/vlocity_ins__InsuranceAsyncBulkRequestDetail__c/vlocity_ins__InsuranceAsyncBulkRequestDetail__c.object-meta.xml
<CustomObject>
    <description>The entity is a child entity of Insurance Async Request and contains processed record details in context of a bulk asynchronous procesing requests.</description>
    <label>Insurance Async Bulk Request Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Async Bulk Request Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>