force-app/main/default/objects/vlocity_ins__InsuranceAsyncBulkRequestDetail__c/fields/vlocity_ins__AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AdditionalInformation__c</fullName>
    <description>The information about the item that&apos;s a part of the insurance async bulk request.</description>
    <label>Additional Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>