force-app/main/default/objects/vlocity_ins__InsuranceAsyncBulkRequestDetail__c/fields/vlocity_ins__AsyncJobId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AsyncJobId__c</fullName>
    <description>The Async Apex Job that&apos;s associated with the item related to the insurance async bulk request that&apos;s processed.</description>
    <label>Async Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>