force-app/main/default/objects/vlocity_ins__InsuranceAsyncBulkRequestDetail__c/fields/vlocity_ins__Description__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Description__c</fullName>
    <description>The description of the request item.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>