force-app/main/default/objects/vlocity_ins__InsuranceAsyncBulkRequestDetail__c/fields/vlocity_ins__InsuranceAsyncBulkRequestId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__InsuranceAsyncBulkRequestId__c</fullName>
    <description>The insurance async bulk request associated with the item.</description>
    <label>Insurance Async Request</label>
    <referenceTo>vlocity_ins__InsuranceAsyncBulkRequest__c</referenceTo>
    <relationshipLabel>Insurance Async Bulk Request Details</relationshipLabel>
    <relationshipName>InsuranceAsyncBulkRequestDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>