force-app/main/default/objects/vlocity_ins__InsuranceAsyncBulkRequestDetail__c/fields/vlocity_ins__ReferenceRecordId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ReferenceRecordId__c</fullName>
    <description>The record of the information that&apos;s processed in the associated insurance async bulk request.</description>
    <label>Reference Record</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>