force-app/main/default/objects/vlocity_ins__InsuranceAsyncBulkRequestDetail__c/fields/vlocity_ins__ReferenceRecordUrl__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ReferenceRecordUrl__c</fullName>
    <description>Link that contains the address of the reference record.</description>
    <formula>HYPERLINK(&apos;/&apos; &amp;vlocity_ins__ReferenceRecordId__c , vlocity_ins__ReferenceRecordId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Record Url</label>
    <type>Text</type>
</CustomField>