force-app/main/default/objects/vlocity_ins__InsuranceAsyncBulkRequestDetail__c/fields/vlocity_ins__SourceSystemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SourceSystemId__c</fullName>
    <description>The ID of the reference record in the source system.</description>
    <label>Source System Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>