force-app/main/default/objects/vlocity_ins__InsuranceAsyncBulkRequestDetail__c/fields/vlocity_ins__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Status__c</fullName>
    <description>Specifies the status of a record.</description>
    <label>RecordStatus</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>WaitingToProcess</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>